[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono="0.4"
tokio={ version = "1", features = ["full"] }
futures="0.3.5"
dashmap="6.1.0"
axum = { version = "0.8.6", features = ["macros"] }
serde = "1.0.228"
reqwest = { version = "0.12", features = ["json"] }
http-body = "1.0.1"
serde_yaml= "0.9.34"
base64="0.22.1"
serde_json="1.0.145"
strum = "0.27"
strum_macros = "0.27"
[build-dependencies]
openapi-model-generator = "0.3.1"
serde_yaml= "0.9.34"
openapiv3 = "2.0"
syn = "2.0"
quote = "1.0"
